# PDEProject

./: .gitignore  CMakeLists.txt  README.md  main.cpp  run.orig  run.sub  scalability.sh  speedup.py
include/: functions.h  operator.h  problem.h  setup.h
src/: functions.cpp  operator.cpp  problem.cpp  setup.cpp
